added much markdown commentary to part 1

--- a/Part2_RediscoverTheHiggsBoson.ipynb
+++ b/Part2_RediscoverTheHiggsBoson.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Rediscover the Higgs boson"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -11,13 +18,12 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import scipy.stats\n",
-    "from scipy.stats import expon"
+    "import scipy.stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -35,8 +41,8 @@
      "output_type": "stream",
      "text": [
       "Number of selected events = 76382\n",
-      "CPU times: user 85.8 ms, sys: 88.3 ms, total: 174 ms\n",
-      "Wall time: 246 ms\n"
+      "CPU times: user 82 ms, sys: 31.1 ms, total: 113 ms\n",
+      "Wall time: 131 ms\n"
      ]
     },
     {
@@ -267,7 +273,7 @@
        "[76382 rows x 9 columns]"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,15 +307,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 11.1 ms, sys: 7.75 ms, total: 18.9 ms\n",
-      "Wall time: 29 ms\n"
+      "CPU times: user 10.2 ms, sys: 1.99 ms, total: 12.2 ms\n",
+      "Wall time: 10.5 ms\n"
      ]
     }
    ],
@@ -323,24 +329,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 43.1 ms, sys: 6.1 ms, total: 49.2 ms\n",
-      "Wall time: 47.6 ms\n"
+      "CPU times: user 30.8 ms, sys: 8.27 ms, total: 39.1 ms\n",
+      "Wall time: 63.2 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x18e591c90>"
+       "<matplotlib.legend.Legend at 0x117a136d0>"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -401,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -420,8 +426,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 201 ms, sys: 14.2 ms, total: 216 ms\n",
-      "Wall time: 213 ms\n"
+      "CPU times: user 195 ms, sys: 11.5 ms, total: 206 ms\n",
+      "Wall time: 207 ms\n"
      ]
     }
    ],
@@ -446,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +495,6 @@
     "plt.legend()\n",
     "\n",
     "bestFitParams\n",
-    "\n",
     "\n",
     "#approximate integral of the best-fit gaussian signal\n",
     "limA = 11500\n",
