commit before ATLAS student feedback

--- a/Part1_MeasureTheZBosonMass.ipynb
+++ b/Part1_MeasureTheZBosonMass.ipynb
@@ -5,19 +5,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Measuring the Z boson mass"
+    "# Measuring the Z boson mass\n",
+    " This notebook contains basic anlaysis of ~500k proton collision events from the ATLAS Open Data pre-selected so that each event contains two muon candidates with transverse mometum greater than 20000 MeV.\n",
+    "The five steps executed in the notebook will:\n",
+    "1. Access a the file of ATLAS Open Data and conver into a 'pandas dataframe'.\n",
+    "\n",
+    "2. Apply a series of event selections so that only events containing oppositely charged muons with specific $p_T$ and $\\eta$ are selected and the data is dominated by the $p p \\rightarrow Z\\rightarrow \\mu^{+}\\mu^{-}$ process\n",
+    "\n",
+    "3. Make some simple histogram plots of the kinematic information of the muon pairs.\n",
+    "\n",
+    "5. Combine the four vectors of the muon pairs to estimate the four-vector of the \\emph{dimuon} system. Create a histogram of the masses of the dimuon system.\n",
+    "\n",
+    "6. Use this histogram and a model of the distribution based on the Cauchy PDF to estimate $m_{Z}$ by minimising the $\\chi^{2}$ between the data and model prediction."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#most python scripts start with 'import' statements like this that make useful packages available. \n",
-    "#Examples are 'uproot' which reads in our data files and allows them to be read, 'numpy' is a powerful \n",
-    "#and popular package for fast manipultation of arrays and 'scipy.stats' is useful for statitical analysis,\n",
-    "#we'll use it to generate and fit fucntions to our data.\n",
+    "# most python scripts start with 'import' statements like this that make useful packages available. \n",
+    "# examples are 'uproot' which reads in our data files and allows them to be read, 'numpy' is a powerful \n",
+    "# and popular package for fast manipultation of arrays and 'scipy.stats' is useful for statitical analysis,\n",
+    "# we'll use it to generate and fit fucntions to our data.\n",
     "import lorentz\n",
     "import uproot\n",
     "import uproot_methods.classes.TLorentzVector as LVepm\n",
@@ -30,15 +41,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4 µs, sys: 7 µs, total: 11 µs\n",
-      "Wall time: 44.1 µs\n",
+      "CPU times: user 5 µs, sys: 8 µs, total: 13 µs\n",
+      "Wall time: 36 µs\n",
       "File has been successfully opened!\n"
      ]
     }
@@ -62,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +369,7 @@
        "[549257 rows x 14 columns]"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 284,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +696,7 @@
        "[532667 rows x 14 columns]"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 285,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +768,7 @@
        " <a list of 15 Patch objects>)"
       ]
      },
-     "execution_count": 278,
+     "execution_count": 287,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -823,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
@@ -1118,12 +1129,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thats completes steps 1-6. You have seen how the chi-squared minisation technique allows us to extract measurements\n",
+    "Thats completes steps 1-5. You have seen how the chi-squared minisation technique allows us to extract measurements\n",
     "of a physical parameter such as the z mass by comparing the predictions of statitical model to data.\n",
     "\n",
     "Refer back to the lab manual to see how you might improve this measurement of the z mass by\n",
-    "    - refining the selection of data to supress any remaining contamination from background processes\n",
-    "    - improve the statitical model of the dimuon mass distribution."
+    "- refining the selection of data to supress any remaining contamination from background processes\n",
+    "- improve the statitical model of the dimuon mass distribution."
    ]
   }
  ],
