more cosmetic tweaks

--- a/Part2_RediscoverTheHiggsBoson.ipynb
+++ b/Part2_RediscoverTheHiggsBoson.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "source": [
     "# Step 2. Apply a series of event selections\n",
-    "    - only select events containing two photons with specific $p_T$ and $\\eta$"
+    "    - only select events containing two photons with specific pt and \\eta"
    ]
   },
   {
@@ -379,7 +379,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x120753210>"
+       "<matplotlib.legend.Legend at 0x127fccd10>"
       ]
      },
      "execution_count": 6,
@@ -450,8 +450,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 369 ms, sys: 27.4 ms, total: 397 ms\n",
-      "Wall time: 407 ms\n"
+      "CPU times: user 354 ms, sys: 26.6 ms, total: 380 ms\n",
+      "Wall time: 387 ms\n"
      ]
     }
    ],
