--- a/Part3_RediscoverTheHiggsBoson_ZZ4l.ipynb
+++ b/Part3_RediscoverTheHiggsBoson_ZZ4l.ipynb
@@ -34,6 +34,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# All data and MC samples should be downloads to the local diretcory from\n",
+    "# https://atlas-opendata.web.cern.ch/atlas-opendata/samples/2020/4lep/\n",
+    "\n",
+    "\n",
     "files = [\n",
     "\"mc_361106.Zee.4lep.root\",\n",
     "\"mc_361107.Zmumu.4lep.root\",\n",
@@ -51,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
