--- a/DS_Tutorial_How_much_Higgs?.ipynb
+++ b/DS_Tutorial_How_much_Higgs?.ipynb
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": 493,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +779,9 @@
     "\n",
     "    # plot f as a function of d\n",
     "\n",
-    "    # what critical value gives you the 68% CI?"
+    "    # read form this plot the critical value that gives you the 68% CI.\n",
+    "    \n",
+    "# Best of luck!"
    ]
   }
  ],
